Jaxrs-spec 0.13
